# atut-2025-26-fil-cond-proj

./: .coverage  .env.example  README.md  docker-compose.yml  pyproject.toml  pytest.ini
dags/: etl_pipeline_dag.py
data/bronze/books_web/: books_web_2026-05-06.jsonl
data/silver/web_catalog_curated/ingestion_date=2026-05-06/: part-00000.csv
scripts/: init_sql_source.py  run_pipeline_local.ps1
src/etl/: __init__.py  config.py  logging_utils.py
src/etl/extract/: __init__.py  books_csv.py  books_sql.py  books_web.py
src/etl/jobs/: __init__.py  run_extract.py  run_load.py  run_transform.py
src/etl/load/: __init__.py  minio_loader.py
src/etl/transform/: __init__.py  spark_transform.py
tests/: conftest.py  test_config.py  test_csv_extractor.py  test_jobs.py  test_minio_loader.py  test_runtime_coverage.py  test_sql_extractor.py  test_transform_helpers.py  test_web_extractor.py
