[project]
name = "atut-2025-26-fil-cond-proj"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.2.1",
    "beautifulsoup4>=4.14.3",
    "boto3>=1.43.4",
    "pandas>=3.0.2",
    "pyspark>=4.1.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
